Se agrega interaccion con la nube

--- a/ReadApp/ReadApp.csproj
+++ b/ReadApp/ReadApp.csproj
@@ -89,6 +89,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <None Include="Data.json" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
@@ -99,8 +100,10 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainPageData.cs" />
+    <Compile Include="Notice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadModel.cs" />
+    <Compile Include="ReadResitory.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
