Comportamiento en nuestra aplicacion

--- a/ReadApp/ReadApp.csproj
+++ b/ReadApp/ReadApp.csproj
@@ -94,6 +94,7 @@
     <None Include="Readme.md" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Behavior\AutoScrollBehavior.cs" />
     <Compile Include="Views\About.xaml.cs">
       <DependentUpon>About.xaml</DependentUpon>
     </Compile>
